crates/roughly/tests/snapshots/test_format__braced__basic.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
{ x }

{
  x
}

{
  x
}

{
  x
  y
}
