crates/roughly/tests/snapshots/test_format__braced__hugging.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
{ x }

{
  x
}

{ x + y }

{
  x +
    y
}

{
  x +
    y
}

{ x + y }

{
  x + y
}
