crates/roughly/tests/snapshots/test_format__braced__semicolon.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
{ expr; expr }

{
  expr
  expr
}

{ expr; expr }

{
  expr
  expr
}

{
  expr
  expr
}

{
  expr
  x +
    y
}
